# cuda-raycast

./: .clang-format  CMakeLists.txt  README.md  main.cu
example_lights/: default.light
example_objs/: default.light
include/: app.cuh  calc.cuh  camera.cuh  common.cuh  light.cuh  light_parser.cuh  obj_parser.cuh  renderer.cuh  shader.cuh  utils.cuh
shaders/: shader.frag  shader.vert
src/: app.cu  calc.cu  calc.cu.bak  camera.cu  light_parser.cu  obj_parser.cu  renderer.cu  shader.cu
